left done, working on right. all text in, forms and url are placeholder

--- a/images/Sign-Up Form.html
+++ b/images/Sign-Up Form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0050)file:///home/depwine/repos/sign-up-form/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up Form</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="js.js"></script>
+    <link rel="stylesheet" href="./Sign-Up Form_files/styles.css">
+    <script src="./Sign-Up Form_files/js.js"></script>
     </head>
 <body>
 
@@ -14,15 +14,14 @@
 
         <div id="left">
             <div class="transCont">
-                <img src="images/odin-lined.png" class="odin">
+                <img src="./Sign-Up Form_files/odin-lined.png" class="odin">
                 <p class="transText">ODIN</p>
             </div>
 
-            <img src="images/francois-hoang-O98B_D0kxyA-unsplash.jpg" class="image"
-                alt="neon tokyo">
+            <img src="./Sign-Up Form_files/francois-hoang-O98B_D0kxyA-unsplash.jpg" class="image" alt="neon tokyo">
             <div class="textFooter">
                 <p class="footURL">Photo by <a href="https://unsplash.com/@aoirostudio">
-                    Francois Hoang</a> on <a href="https://unsplash.com">Unsplash.</a> </p>
+                    Francois Hoang</a> on <a href="https://unsplash.com/">Unsplash.</a> </p>
             </div>
         </div>
 
@@ -62,7 +61,6 @@
                 <p class="footerText">
                     Create Account
                     <br>
-                    <br>
                     Already have an account? Log In
                 </p>
 
@@ -70,5 +68,5 @@
         </div>
     </div>
 
-</body>
-</html>
+
+</body></html>
