--- a/index.html
+++ b/index.html
@@ -43,27 +43,43 @@
             <div id="main">
                 <p class="bodyHead">Let's do this!</p>
 
-                <form class="formText">
-                    FIRST NAME
-                    <input type="text">
-                    LAST NAME
-                    <input type="text">
-                    EMAIL
-                    <input type="email" name="" id="">
-                    PHONE NUMBER
-                    <input type="tel" name="" id="">
-                    PASSWORD
-                    <input type="password" name="" id="">
-                    CONFIRM PASSWORD
-                    <input type="password" name="" id="">
+                <form class="formText" action="" method="post">
+
+                    <fieldset>
+                        <div class="topFormRow">
+                        <label for="firstName" class="first-name">FIRST NAME</label>                    
+                        <input type="text" id="firstName">
+                        
+                        <label for="lastName" class="last-name">LAST NAME</label>                    
+                        <input type="text" id="lastName">
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <div class="middleFormRow">
+                            <label for="email" class="email">EMAIL</label>
+                            <input type="email" name="email" id="email">
+                            <label for="tel" class="tel">PHONE NUMBER</label>
+                            <input type="tel" name="tel" id="tel">
+                        </div>
+                    </fieldset>
+
+                    <fieldset>
+                        <div class="bottomFormRow">
+                            <label for="user_password" class="tel">PASSWORD</label>
+                            <input type="password" name="user_password" id="user_password">
+                            <label for="user_password_conf" class="tel">CONFIRM PASSWORD</label>
+                            <input type="password" name="user_password_conf" id="user_password_conf">
+                        </div>
+                    </fieldset>
+                    <button type="submit" class="submitButton">Create Account</button>
                 </form>
             </div>
+
             <div id="footer">
                 <p class="footerText">
-                    Create Account
                     <br>
                     <br>
-                    Already have an account? Log In
+                    Already have an account? <strong class="login">Log In</strong>
                 </p>
 
             </div>
