--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="styles.css">
     <script src="js.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@700&display=swap" rel="stylesheet">
+
     </head>
 <body>
 
@@ -14,8 +19,8 @@
 
         <div id="left">
             <div class="transCont">
-                <img src="images/odin-lined.png" class="odin">
-                <p class="transText">ODIN</p>
+                <img src="images/pngkey.com-triangle-png-21183.png" class="odin">
+                <p class="transText">DEPWINE</p>
             </div>
 
             <img src="images/francois-hoang-O98B_D0kxyA-unsplash.jpg" class="image"
